more enhancements. This one is live

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Find 1000's of recipes with our simple to use search engine. You will find anything from delicious desserts to full meals.">
+    <meta name="author" content="Lance Ibrahim">
 
-    <title>Is Recipes - Find a delicious custom recipe</title>
+    <title>Is Recipes - Find 1000's of delicious custom recipes</title>
 
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
