--- a/recipe.html
+++ b/recipe.html
@@ -3,11 +3,12 @@
 
   <head>
     <meta charset="utf-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Find 1000's of recipes with our simple to use search engine. You will find anything from delicious desserts to full meals.">
+    <meta name="author" content="Lance Ibrahim">
 
-    <title>Is Recipes - Find a delicious custom recipe</title>
+    <title>Is Recipes - Find 1000's of delicious custom recipes</title>
 
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
@@ -90,6 +91,7 @@
               </div>
             </div>
             <div class="col-lg-12 order-lg-2">
+              <h2 style = "color:#007bff;">{{recipeData.title}}</h2>
               <div class="p-5">
                 <p>Vegetarian: {{recipeData.vegetarian}}</p>
                 <p>Vegan: {{recipeData.vegan}}</p>
