added ads to the pages. Thi is live

--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
 
     <div ng-controller="GetRecipeController">
 <div class="container" align="center">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- isrecipe header -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7867777590859919"
+     data-ad-slot="8111413215"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</br>
     <form class="form-inline md-form mr-auto mb-4" name="searchForm" ng-submit="searchForm.$valid && getRecipes()" novalidate>
         <input class="form-control mr-sm-2" type="text" placeholder="Search Recipes" aria-label="Search" ng-model="search" name="search" style="max-width: 500px; margin-top: 5px;" required>
         <button class="btn btn-primary btn-xl rounded-pill mt-5" type="submit" style="margin-top:5px !important">Search</button>
