--- a/recipe.html
+++ b/recipe.html
@@ -84,6 +84,17 @@
     <div ng-controller="GetSingleRecipeController">
       <section>
         <div class="container">
+          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- isrecipe header -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7867777590859919"
+     data-ad-slot="8111413215"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
           <div class="row align-items-center">
             <div class="col-lg-12 order-lg-1">
               <div class="p-5">
