--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
     <title>Is Recipes - Find 1000's of delicious custom recipes</title>
 
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
          (adsbygoogle = window.adsbygoogle || []).push({
               google_ad_client: "ca-pub-7867777590859919",
               enable_page_level_ads: true
          });
-    </script>
+    </script> -->
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -108,7 +108,9 @@
 <div class="container">
 
     <p>Welcome to isrecipe.com! We have 1000's of recipes to choose from with a few random ones featured below.<br />
-    Please take a glace of some of our delicious featured recipes as well as search for your favorite recipes in the search box above!</p>
+    Please take a glance of some of our delicious featured recipes as well as search for your favorite recipes in the search box above!<br />
+    Our catalog is powered by an api with over 360K recipes!</p>
+
     <h4>Featured Recipes</h4>
   </div>
     <div ng-repeat="randRecipe in randRecipeData">
